<resources>
    <string name="app_name">Cantiques en Mafa</string>
    <string name="titre_cantique">Dimèsh Nslébèrdè Zhiklè \n Recueil de Cantiques en Mafa</string>
    <string name="mafa_name">Dimèsh Nslébèrdè Zhiklè</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">
        Cette Application vous permet d\'avoir accès facilement au recueil de cantiques en langue mafa. Vous pouvez l\'avoir partout avec vous sur votre mobile
    </string>
    <string name="caracteristiques">
        \u25CF Utilisation hors ligne \n
        \u25CF Edition sans musique  \n
        \u25CF Rechercher un chant à partir de son numéro ou du sommaire. \n
        \u25CF Ajouter un chant à la liste des favoris
    </string>
    <string name="encouragement">
        Vous pouvez nous faire un don pour nous encourager à effectuer les prochaines mises à jour de cette application
        et à produire d\'avantage d\'autres applications.
    </string>
    <string name="remarque">N\'hesitez pas non plus à nous faire parvenir les remarques et critiques sur cette application sur l\'un des adresses ci-dessus.</string>
    <string name="favoris_vide">Vous n\'avez pas encore des chants favoris. Ajouter un chant à votre liste de favoris en cliquant sur l\'icône de coeur se trouvant dans la page de mélodie </string>
    <string-array name="Titre_cantiques">
        <item>1 Aman nga co Yèsu a ndav nga ma</item>
        <item>2 Pombi Bi m’mbel nga</item>
        <item>3 A pats a vaɗ ka takaha nga</item>
        <item>4 Bab Zhiklè, i slébèrdè ka</item>
        <item>5 Bai Yèsu, kra Zhiklè	</item>
        <item>6 Do a sam Yèsu	</item>
        <item>7 War a ka co !	</item>
        <item>8 Ma Zhiklè a ndiv azɓai	</item>
        <item>9 Nzlembaɗ mbela’a gar Yèsu	</item>
        <item>10 I sun a vava	</item>
        <item>11 Yèsu a gaɗa : Vo-washkè arna	</item>
        <item>12 Civèɗ mbela’a	</item>
        <item>13 Yèsu a nco wof ngézlèl na	</item>
        <item>14 Sam a zhè te zhiklè te géɗè’a	</item>
        <item>15 Yèsu a zhè a nshèffè	</item>
        <item>16 Nga wuffè a civèɗ Yèsu	</item>
        <item>17 Bai Yèsu a di a shkè deɓa	</item>
        <item>18 Slambaɗa, do a sam nhela’a	</item>
        <item>19 Yèsu Kristi a zhè a woy ka	</item>
        <item>20 I mana ndav ga	</item>
        <item>21 Zhiklè ngu maya	</item>
        <item>22 Zlèzlè’a nga gu ɓèl malai	</item>
        <item>23 Te nhér gèɗ ga	</item>
        <item>24 Ka woya njèkeda mali ngaya dè ?	</item>
        <item>25 Yèsu a hel sam herkeda	</item>
        <item>26 Mali ngaya ntila ma ɗè ?	</item>
        <item>27 Va-vau	</item>
        <item>28 Ndav ga wuffè	</item>
        <item>29 Pombi herkeda	</item>
        <item>30 Yèsu a mbad pombaz a hai	</item>
        <item>31 Wa bab ga, washkè	</item>
        <item>32 N’azɓai a mpèn ndav ngaya	</item>
        <item>33 Pats n’ndev matakwan ga t’herkeda	</item>
        <item>34 Nza a nda nga	</item>
        <item>35 Yèsu Kristi, pombaz ngaya	</item>
        <item>36 I war i ngreda mali ga auda	</item>
        <item>37 M’mbel nga ma	</item>
        <item>38 I sun woyam staɗ a iyam mbela’a	</item>
        <item>39 A gèɗ pombi man a ndiv azɓai	</item>
        <item>40 Wof ngézlèlè a Yèsu Krist	</item>
        <item>41 Yèsu ndo madzaf nzura’a	</item>
        <item>42 I mana ndav ga	</item>
        <item>43 Ka gu zlau ɓai, Zhiklè woy ka	</item>
        <item>44 Nga wuffè a géɗ Zhiklè	</item>
        <item>45 Ɗakwa, gol Yèsu, ka zlatsahi ɓai !	</item>
        <item>46 Man tolom Zhiklè a ɓica nga	</item>
        <item>47 Ka te zhiklè, i t’herkeda	</item>
        <item>48 Man ka woya ka ngècè nshèffè mbia’a	</item>
        <item>49 Zhiklè nzlündo Yèsu a herkeda	</item>
        <item>50 I jèjèr sak Yèsu	</item>
        <item>51 Mandal ga washkè co ma Zhiklè	</item>
        <item>52 Bab ga te géɗè’a, i da pca ka a gèɗ ɓai	</item>
        <item>53 Na haha kra tambak Zhiklè	</item>
        <item>54 I sun ɓai èhèmè i mbel ga	</item>
        <item>55 Alleluya, slu dimèsh a sam Yèsu	</item>
        <item>56 Bab nga Zhiklè a bèhè	</item>
        <item>57 Washkè, ngo-dokona, a gi Bab nga	</item>
        <item>58 Mpi ndohi Zhiklè tèlèba	</item>
        <item>59 Mandal ga washkè !	</item>
        <item>60 Ngray civèɗ movar nshèffè	</item>
        <item>61 Ko wawa a nshèffè mɓua’a	</item>
        <item>62 Slambaɗa, mizlinè Yèsu a n’ndev di ɓai	</item>
        <item>63 Mwuɗitepa…	</item>
        <item>64 Yèsu a tsi ntamagi ndav nga	</item>
        <item>65 A ndohi kin pela ɗè ?	</item>
        <item>66 Ha m’metsi nga	</item>
        <item>67 Washkè, ka njèy ma Yèsu	</item>
        <item>68 Ndo m’mɓer tambaki a bèhè	</item>
        <item>69 Yèsu a sun civèɗ	</item>
        <item>70 Va-nju ma m’mbel ndo Yèsu Krist	</item>
        <item>71 Va-fa na gèɗ a ma Yèsu	</item>
        <item>72 Kinè, kin ndohi nderɗe Zhiklè krèh	</item>
        <item>73 Zhiklè a ɓer skwi tèlèba	</item>
        <item>74 Movar man i ndia, movar nshèffè	</item>
        <item>75 Yowa, ara Daniel	</item>
        <item>76 Woba ndo	</item>
        <item>77 Nzlembaɗ Yèsu, nzlembaɗ mbia’a	</item>
        <item>78 Pierre te wurom	</item>
        <item>79 Va-pu di sèi a Yèsu !	</item>
        <item>80 Va-slambaɗa a Yèsu	</item>
        <item>81 Nshèffè mɓua’a a gèɗ ndohi tèlè	</item>
        <item>82 Ko ahngwa ahngwa a gèɗ herkeda	</item>
        <item>83 Zhiklè a bèhè ndohai	</item>
        <item>84 Zhiklè a woy herkeda	</item>
        <item>85 I woy man i rka ka	</item>
        <item>86 Fali ga i va na Yèsu	</item>
        <item>87 Yèsu, i herda ka va	</item>
        <item>88 I hér mwoy-ndo ngaya	</item>
        <item>89 Ndav ga nkezla	</item>
        <item>90 Yèsu nga shkè a sam ngaya	</item>
        <item>91 Ndohai 5000	</item>
        <item>92 Nza a tsagi ga	</item>
        <item>93 Yèsu, herde nga, a sam ngaya	</item>
        <item>94 Yèsu ndo m’mbel ndohai, i woya’a	</item>
        <item>95 Zhiklè nga shid gèɗ	</item>
        <item>96 Yèsu a pra nga malai	</item>
        <item>97 Zhiklè Bab nga te géɗè’a	</item>
        <item>98 Zhiklè mbia’a nga slébèrdè ka	</item>
        <item>99 Ntilyè a mali ga tèlèba wa ?	</item>
        <item>100 T’hwaɗ ki mamokwa’a	</item>
        <item>101 Ta yu ndo m’mbel ndo a patsna	</item>
        <item>102 Skwi nhél sam	</item>
        <item>103 Vo-washkè a sam ndo m’mbel ndo	</item>
        <item>104 Ka Zhiklè, ndha nga a Mèzhèɓ ngaya	</item>
        <item>105 A patsna ta yu Yèsu Kristi	</item>
        <item>106 Ma mbela’a man i tsena’a	</item>
        <item>107 M’metsi a zlèzlèmè a gèɗ herkeda	</item>
        <item>108 Zhiklè nga shid gèɗ	</item>
        <item>109 Yèsu a m’mets na ma	</item>
        <item>110 Vo-washkè, va-ngwod ndav kinè !	</item>
        <item>111 Dalahimam ga vo-washkè	</item>
        <item>112 Skwi mwuffè te ndav ga	</item>
        <item>113 Ntétékè ara skwi ambalai	</item>
        <item>114 Yèsu a n’ngul m’metsi a patsna	</item>
        <item>115 Ngodokoy a sam Bab nga	</item>
        <item>116 Yèsu a mshkè, a m’mets na	</item>
        <item>117 Maya maya, vaɗ a shkè	</item>
        <item>118 Yèsu Bai a gèɗ bihai	</item>
        <item>119 Do, a ka gaɗa ta tèlè	</item>
        <item>120 Yèsu Bi m’mbel ndo klèng, nya ma	</item>
        <item>121 Washkè tsena da’ai Zhiklè !	</item>
        <item>122 Ndo m’mbel ndo man i co a ndav	</item>
        <item>123 Kin rka nrkedi cè ?	</item>
        <item>124 Vo-washkè ndo tèlè	</item>
        <item>125 Mèzhèɓ Zhiklè man nkezla’a	</item>
        <item>126 Gu susai…	</item>
        <item>127 Yèsu civèɗ nshèffè ga	</item>
        <item>128 Yèsu, kra Bi Zhiklè	</item>
        <item>129 A pats man Bi Yèsu	</item>
        <item>130 Nga da ga na mbali a Bi nga	</item>
        <item>131 Zhiklè a woy ndo nhadka ma	</item>
        <item>132 Nga ɓica va a haha	</item>
        <item>133 Wa ndohi Yèsu Kristi, ngo-gokoy malwuɗai	</item>
        <item>134 Zhiklè a woy nga	</item>
        <item>135 Ko wawa a nshèffè mɓua’a	</item>
        <item>136 Ndo man a woy Yèsu	</item>
        <item>137 Zhiklè a ntsu kokwar Egypte	</item>
        <item>138 Herkeda haha	</item>
        <item>139 Wa Zhiklè !	</item>
        <item>140 Yèsu a woy ndo	</item>
        <item>141 I gu zlau a géɗ Adam a Eve	</item>
        <item>142 Va-war Yèsu kra Zhiklè	</item>
        <item>143 Vo-washkè, va-tsena ma Zhiklè	</item>
        <item>144 Zhiklè a woy mandazlihai	</item>
        <item>145 Wa Bi Zhiklè	</item>
        <item>146 Ndo nwush tser skwai	</item>
        <item>147 Dimèsh Marai a géɗ Noel	</item>
        <item>148 Zhiklè a ngau giɗfèk, a ngau géɗ herkeda	</item>
        <item>149 Iyè a sam nangwa, man Yèsu a shkè deɓa ?	</item>
        <item>150 Bi Zhiklè a rka kinè te matakwan	</item>
        <item>151 Wa Yèsu, kra Zhiklè	</item>
        <item>152 A mshkè herkeda a géɗ mali nga	</item>
    </string-array>
</resources>